Moved cocoon.xconf in WEB-INF where is should have been from the start.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7155 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/conf/web.xml
+++ b/src/documentation/conf/web.xml
@@ -34,7 +34,7 @@
     -->
     <init-param>
       <param-name>configurations</param-name>
-      <param-value>/cocoon.xconf</param-value>
+      <param-value>/WEB-INF/cocoon.xconf</param-value>
     </init-param>
 
     <!--
