a motivation for nicolaken to upgrade centipede 0.1 to 1.0 ;-)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7266 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -4,53 +4,54 @@
 
 
                    * ===================================== *
-                   |   Krysalis Centipede Build System     |
-                   * ===================================== *      
-                                     by               
-                                             
+                   |         Forrest Build System          |
+                   * ===================================== *
+                                     by
+
                    Nicola Ken Barozzi <barozzi@nicolaken.com>
-		   Marc Johnson <mjohnson at apache dot org>       
-                     
-                   extends the Apache Cocoon Build System 
+                   Marc Johnson <mjohnson at apache dot org>
+
+                   extends the Apache Cocoon Build System
                        (http://xml.apache.org/cocoon/)
                                      by
                    Stefano Mazzocchi <stefano@apache.org>
                    Carsten Ziegeler <cziegeler@apache.org>
-                   
--->    
+
+-->
 <!-- =================  Main project targets and info =================  -->
-<!ENTITY project-target     SYSTEM "./src/targets/project.xtarget"> 
-<!ENTITY interactive-target SYSTEM "./src/targets/interactive.xtarget"> 
+<!ENTITY project-target     SYSTEM "./src/targets/project.xtarget">
+<!ENTITY interactive-target SYSTEM "./src/targets/interactive.xtarget">
 <!-- =================================================================== -->
 
 <!-- ======================  Scratchpad targets =======================  -->
-<!ENTITY scratchpad-target SYSTEM "./src/scratchpad/targets/scratchpad.xtarget"> 
+<!ENTITY scratchpad-target SYSTEM "./src/scratchpad/targets/scratchpad.xtarget">
 <!-- =================================================================== -->
 
-<!-- ========================  Contrib targets ========================  --> 
+<!-- ========================  Contrib targets ========================  -->
 <!ENTITY contrib-target SYSTEM "./src/contrib/targets/contrib.xtarget">
 <!-- =================================================================== -->
 
-<!-- ==================  Krysalis Centipede targets ===================  --> 
-<!ENTITY preinit-target SYSTEM "./tools/centipede/targets/preinit.xtarget"> 
-<!ENTITY init-target    SYSTEM "./tools/centipede/targets/init.xtarget"> 
-<!ENTITY compile-target SYSTEM "./tools/centipede/targets/compile.xtarget"> 
-<!ENTITY util-target    SYSTEM "./tools/centipede/targets/util.xtarget"> 
-<!ENTITY dev-target     SYSTEM "./tools/centipede/targets/dev.xtarget"> 
-<!ENTITY test-target    SYSTEM "./tools/centipede/targets/test.xtarget"> 
-<!ENTITY robot-target   SYSTEM "./tools/centipede/targets/robot.xtarget"> 
+<!-- ==================  Krysalis Centipede targets ===================  -->
+<!ENTITY preinit-target SYSTEM "./tools/centipede/targets/preinit.xtarget">
+<!ENTITY init-target    SYSTEM "./tools/centipede/targets/init.xtarget">
+<!ENTITY compile-target SYSTEM "./tools/centipede/targets/compile.xtarget">
+<!ENTITY util-target    SYSTEM "./tools/centipede/targets/util.xtarget">
+<!ENTITY dev-target     SYSTEM "./tools/centipede/targets/dev.xtarget">
+<!ENTITY test-target    SYSTEM "./tools/centipede/targets/test.xtarget">
+<!ENTITY robot-target   SYSTEM "./tools/centipede/targets/robot.xtarget">
 <!-- =================================================================== -->
 ]>
 
-<project default="interactive" basedir="." name="krysalis">
+<project default="interactive" basedir="." name="forrest">
 <!--
 
 Installing the build tools
 ==========================
 
-The Krysalis build system is based on Apache Ant, which is a Java building tool
-originally developed for the Tomcat project but now used in many other
-Apache projects and extended by many developers.
+The Forrest build system is based on Krysalis Centipede 0.1, itself being
+based on Ant, which is a Java building tool originally developed for the
+Tomcat project but now used in many otherApache projects and extended
+by many developers.
 
 Ant is a little but very handy tool that uses a build file written in XML
 (this file) as building instructions. For more information refer to
@@ -68,7 +69,7 @@ That's all you have to do to be ready to go.
 Building instructions
 =====================
 
-First, make sure your current working directory is where this very file 
+First, make sure your current working directory is where this very file
 is located. Then type
 
   ./build.sh (unix)
@@ -104,7 +105,7 @@ and you don't have to touch this file (which you shouldn't need to do).
 Build targets
 =============
 
-The build system is not only responsible of compiling the project into a jar 
+The build system is not only responsible of compiling the project into a jar
 file, but is also responsible for creating the HTML documentation, javadocs,
 distributions and web site. In fact, the file you have here is _exactly_ what
 is used by project maintainers to take care of everything in the project,
@@ -151,34 +152,34 @@ or
 
 ============================================================================ -->
 
- 
+
   <!-- =================================================================== -->
   <!-- external reference are relative to to **/*.xtarget;                 -->
   <!-- see entity decalrations at the start of this file                   -->
-  <!-- =================================================================== -->  
-  <!-- Pre Initialization      -->  &preinit-target;  
-  <!-- =================================================================== -->  
-  <!-- Project targets         -->  &project-target;    
   <!-- =================================================================== -->
-  <!-- Initialization targets  -->  &init-target;  
+  <!-- Pre Initialization      -->  &preinit-target;
   <!-- =================================================================== -->
-  <!-- Compile targets         -->  &compile-target;  
-  <!-- =================================================================== -->  
-  <!-- Interactive targets     -->  &interactive-target;  
+  <!-- Project targets         -->  &project-target;
+  <!-- =================================================================== -->
+  <!-- Initialization targets  -->  &init-target;
+  <!-- =================================================================== -->
+  <!-- Compile targets         -->  &compile-target;
+  <!-- =================================================================== -->
+  <!-- Interactive targets     -->  &interactive-target;
   <!-- =================================================================== -->
   <!-- Scratchpad targets      -->  &scratchpad-target;
   <!-- =================================================================== -->
   <!-- Contrib targets         -->  &contrib-target;
   <!-- =================================================================== -->
-  <!-- Utility  targets        -->  &util-target;  
+  <!-- Utility  targets        -->  &util-target;
   <!-- =================================================================== -->
-  <!-- Developer targets       -->  &dev-target;  
+  <!-- Developer targets       -->  &dev-target;
   <!-- =================================================================== -->
   <!-- Testcases targets       -->  &test-target;
   <!-- =================================================================== -->
   <!-- "Scripts" targets       -->  &robot-target;
   <!-- =================================================================== -->
-  
+
 </project>
 
 <!-- End of file -->
