--- a/build.xml
+++ b/build.xml
@@ -3,9 +3,9 @@
 
 <!--<!DOCTYPE project SYSTEM "./tools/antipede/build.dtd" >-->
 <!DOCTYPE project [
-  <!-- antipede -->    
-  <!ENTITY import-antipede  SYSTEM "./tools/antipede/build.xtarget"> 
-                   
+  <!-- antipede -->
+  <!ENTITY import-antipede  SYSTEM "./tools/antipede/build.xtarget">
+
 ]>
 <project default="interactive" basedir="." name="project build file">
 
@@ -13,20 +13,20 @@
                    * ===================================== *
                    |   Krysalis Centipede Build System     |
                    * ===================================== *
-                                     by               
-                                             
+                                     by
+
                    Nicola Ken Barozzi (nicolaken@apache.org)
-                   Marc Johnson (mjohnson@apache.org)       
-                   
-                   
-                   For a simple interactive build, simply 
+                   Marc Johnson (mjohnson@apache.org)
+
+
+                   For a simple interactive build, simply
                    run the build script (build.bat or build.sh)
 </description>
 
   <path id="classpath">
     <fileset dir="./lib/endorsed">
       <include name="*.jar"/>
-    </fileset>  
+    </fileset>
     <fileset dir="./lib/core">
       <include name="*.jar"/>
     </fileset>
@@ -34,7 +34,7 @@
       <include name="*.jar"/>
     </fileset>
   </path>
-  
+
 
   <!-- =================================================================== -->
   <!-- Targets for this project                                            -->
@@ -43,7 +43,7 @@
   <target name="init" depends="-init">
     <property name="name"                  value="${xgump.module.project.name}"/>
     <property name="packages"              value="${xgump.module.project.packages}"/>
-    
+
     <property name="build.root"            value="${xlayout.build.dir}"/>
     <property name="build.dir"             value="${xlayout.build.dir}"/>
     <property name="resource.dir"          value="${xlayout.source.resources.dir}"/>
@@ -57,9 +57,9 @@
     <property name="tools.dir"             value="./tools"/>
     <property name="tools.jar"             value="${java.home}/../lib/tools.jar"/>
     <available file="${tools.jar}"  property="tools.jar.present"/>
-    
+
   </target>
-  
+
   <target name="run" depends="init">
 
     <antcall target="runforrestrun">
@@ -92,8 +92,8 @@
   <!-- =================================================================== -->
   <!-- Interactive build                                                   -->
   <!-- =================================================================== -->
-  <target name="interactive" description="Interactive Build" depends="-init">          
-    <echo> 
+  <target name="interactive" description="Interactive Build" depends="-init">
+    <echo>
     --------------------------------------------------------------
 
           ${xgump.module.project.name} ${xgump.module.project.version.major}.${xgump.module.project.version.minor}   [${YEAR}]
@@ -101,35 +101,35 @@
     --------------------------------------------------------------
      Using ${ant.version}
      Build file ${ant.file}
-    --------------------------------------------------------------   
-     These are the most common build targets.   
-     You can also invoke them directly; see build.xml for more info. 
-     Builds will be in /build directory, distributions in /dist.        
-        
-   
-     compile ---------- compiles the source code      
-     test ------------- performs the jUnit tests       
+    --------------------------------------------------------------
+     These are the most common build targets.
+     You can also invoke them directly; see build.xml for more info.
+     Builds will be in /build directory, distributions in /dist.
+
+
+     compile ---------- compiles the source code
+     test ------------- performs the jUnit tests
      jar -------------- create the jar files
-     docs ------------- generates the html docs - clean not needed        
-     javadocs --------- generates the API documentation   
-     site ------------- generates the html site (docs+reports)    
-     clean ------------ cleans the build directory    
-     dist ------------- creates src and bin distributions    
-     scratchpad ------- build-run scratchpad code       
-     contrib ---------- build-run contributed code    
-   
+     docs ------------- generates the html docs - clean not needed
+     javadocs --------- generates the API documentation
+     site ------------- generates the html site (docs+reports)
+     clean ------------ cleans the build directory
+     dist ------------- creates src and bin distributions
+     scratchpad ------- build-run scratchpad code
+     contrib ---------- build-run contributed code
+
 
     </echo>
-    <property name="input.selection" value="docs"/>        
-    <centipede-user-input name="input.selection">Please select a target </centipede-user-input>   
-    
+    <property name="input.selection" value="docs"/>
+    <centipede-user-input name="input.selection">Please select a target </centipede-user-input>
+
     <antcall target="call-cent">
-      <param name="cent-name"   value="centipede"/> 
-      <param name="cent-target" value="splash"/> 
+      <param name="cent-name"   value="centipede"/>
+      <param name="cent-target" value="splash"/>
     </antcall>
- 
+
     <antcall target="${input.selection}"/>
-    
+
   </target>
 
 
@@ -139,25 +139,25 @@
 
   <target  name="compile"   depends="-init"
            description="Compile java source code">
-           
+
     <antcall target="call-cent">
-      <param name="cent-name"   value="centipede"/> 
-      <param name="cent-target" value="compile"/> 
+      <param name="cent-name"   value="centipede"/>
+      <param name="cent-target" value="compile"/>
     </antcall>
-    
-  </target>             
-  
+
+  </target>
+
   <!-- ================================== -->
   <!--              Scratchpad               -->
   <!-- ================================== -->
 
   <target  name="scratchpad"   depends="-init"
            description="Execute scratchpad targets">
-           
+
     <ant antfile="${xlayout.source.scratchpad.targets.dir}/scratchpad.xml"/>
-    
-  </target>  
-    
+
+  </target>
+
   <!-- ================== -->
   <!-- Prepares the docs  -->
   <!-- ================== -->
@@ -295,7 +295,7 @@
   <!-- =================================================================== -->
   <!-- Creates the API documentation                                       -->
   <!-- =================================================================== -->
-  <target name="javadocs" 
+  <target name="javadocs"
       description="* Generates the API documentation">
     <mkdir dir="${build.javadocs}"/>
     <javadoc packagenames="${packages}"
@@ -312,7 +312,7 @@
       <classpath refid="classpath"/>
     </javadoc>
   </target>
-  
+
   <!-- =================================================================== -->
   <!-- Validate xml                                                        -->
   <!-- =================================================================== -->
@@ -389,7 +389,7 @@
     </copy>
     <copy todir="${site}/apidocs" filtering="off">
       <fileset dir="${build.javadocs}"/>
-    </copy>    
+    </copy>
   </target>
 
 
@@ -408,6 +408,7 @@
     <cvs cvsRoot=":pserver:anoncvs@cvs.apache.org:/home/cvspublic"
          package="${getcvsmodule.package}"
          dest="${getcvsmodule.work.dir}"
+         quiet="true"
     />
   </target>
 
@@ -491,53 +492,53 @@
     </antcall>
 
   </target>
-  
+
 
 
    <target name="forrestbar" depends="init">
-   
+
       <mkdir dir="${build.dir}" />
       <mkdir dir="${build.dir}/work/forrestbar" />
-         
+
       <jar jarfile="${build.dir}/work/forrestbar/forrestbar.jar">
          <fileset dir="src/resources/forrestbar" includes="content/**/*" />
       </jar>
-         
+
       <copy file="src/resources/forrestbar/install.js" todir="${build.dir}/work/forrestbar" overwrite="true" />
 
       <zip zipfile="${build.dir}/forrestbar.xpi" basedir="${build.dir}/work/forrestbar" />
-      
-   </target>
-  
 
-                      
+   </target>
+
+
+
   <!-- ================================== -->
   <!--        Target used by Gump         -->
   <!-- ================================== -->
-  
+
   <target  name="gump" description="Target used by Gump">
-           
+
       <antcall target="docs"/>
       <antcall target="webapp"/>
-               
+
   </target>
 
-                      
+
   <!-- =================================================================== -->
   <!-- Import Ant-Centipede init targets - sets up basic build stuff                          -->
   <!-- =================================================================== -->
-  <!--  
+  <!--
         This is the target that initializes tasks and properties used
         commonly in every other target.
-        
+
         Remember to add depends="init" to every target, so that this
         target is called before any other.
-                 
+
         This target is internal; to make it unusable from the commandline,
-        its name starts with a hyphen. 
+        its name starts with a hyphen.
         To make it invisible when using -projecthelp, it lacks a description.
-  -->      
+  -->
 
     &import-antipede;
-      
+
 </project>
