Fixed build that was failing because of bad reference to scratchpad built classes location.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7315 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -234,7 +234,7 @@
       <fileset dir="${build.dest}">
         <include name="**/*.class"/>
       </fileset>
-      <fileset dir="${build.dir}">
+      <fileset dir="${build.scratchpad.dest}">
         <include name="**/*.class"/>
       </fileset>
     </copy>
