<action dev="NKB" type="updTE" context="build">       Updated Cocoon to 2.1-dev to use xsltc and new CLI       status messages.       Logs are under the WEBINF dir in the work dir and in the build dir       there is the list of the broken links.      </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7330 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -244,6 +244,7 @@
       <fileset dir="${documentation.context.dir}/conf">
         <include name="sitemap.xmap"/>
         <include name="cocoon.xconf"/>
+        <include name="logkit.xconf"/>
       </fileset>
     </copy>
     <copy todir="${build.context}/WEB-INF/" filtering="on">
@@ -251,7 +252,7 @@
         <exclude name="sitemap.xmap"/>
       </fileset>
     </copy>
-
+    
     <!-- Copy libraries -->
     <copy todir="${build.context}/library/" filtering="on">
       <fileset dir="${documentation.context.dir}/library">
@@ -369,7 +370,8 @@
       <arg value="-c."/>
       <arg value="-d../docs"/>
       <arg value="-w../work"/>
-      <arg value="-l../work/cocoon.log"/>
+      <arg value="-b../brokenlinks.txt"/>      
+      <arg value="-k../work/logkit.xconf"/>
       <arg value="-u${centipede.tools.cents.forrest.loglevel}"/>
       <arg value="index.html"/>
       <classpath>
