<action dev="NKB" type="add" context="docs">      Added breadcrumb trali script from Avalon site's skin.      Made by Leo Simmons (tm)     </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7341 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -199,8 +199,9 @@
     <filter token="link1.href"        value="http://www.apache.org/"/>
     <filter token="link2"             value="xml.apache"/>
     <filter token="link2.href"        value="http://xml.apache.org/"/>
-    <filter token="link3"             value="forrest"/>
-    <filter token="link3.href"        value="http://xml.apache.org/forrest/"/>
+    <!-- the breadcrumb script already generates it, so it needs to be kept blank --> 
+    <filter token="link3"             value=""/>
+    <filter token="link3.href"        value=""/>
     <filter token="group-logo.src"    value="images/group-logo.gif"/>
     <filter token="group-logo.href"   value="http://xml.apache.org/"/>
     <filter token="group-logo.alt"    value="Apache XML logo"/>
