applying forrestbot patches (wip) for mpo@outerthought.org
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7352 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -606,7 +606,9 @@
 
   <target name="bot.run" depends="bot.conf2build, bot.prepare-cp" >
     <!-- delegates to the generated XML file -->
-    <ant antfile="${bot.work.build.xml}" target="work" inheritRefs="true"/>
+    <ant antfile="${bot.work.build.xml}" target="work" inheritRefs="true">
+        <property name="bot.logs.dir" value="${xlayout.build.bot.projects}" />
+    </ant>
   </target>
 
   <target name="bot" depends="bot.run" />
