Synchronise changes from the new "bert" skin. The "forrest-site" skin is now the default again.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7372 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -188,7 +188,7 @@
   <target name="prepare-docs" depends="init, compile">
 
     <property name="centipede.tools.cents.forrest.loglevel" value="ERROR"/>
-    <property name="use.skin" value="bert"/>
+    <property name="use.skin" value="forrest-site"/>
 
     <property name="documentation.context.dir"  value="${resource.dir}"/>
     <property name="documentation.source.dir"   value="${context.dir}"/>
