Changed bot.conf2build target to ensure that work.build.xml and default.parameters.xml always get build.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7395 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -568,6 +568,10 @@
   </target>
 
   <target name="bot.conf2build" depends="bot.init" >
+		<!-- remove previous versions to force generation again -->
+		<delete file="${bot.work.build.xml}" />
+		<delete file="${bot.default.parameters.xml}" />
+
     <!-- builds the different xml files this process needs.  -->
     <style in="${bot.forrestbot.xconf}"
        out="${bot.work.build.xml}"
