Added -V switch to give user feedback on the status of the processing.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7416 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -384,6 +384,7 @@
       <arg value="-b../brokenlinks.txt"/>
       <arg value="-k../work/logkit.xconf"/>
       <arg value="-u${centipede.tools.cents.forrest.loglevel}"/>
+      <arg value="-V"/>
       <arg value="index.html"/>
       <classpath>
         <path refid="classpath"/>
