- Allows users to have a custom sitemap, overriding the forrest-provided one.    Default location is src/documentation/sitemap.xmap, though it is    configurable.
 - Allows users to add jars to the webapp, by default from
   src/documentation/lib (configurable). This is useful for adding custom
   sitemap components, or testing hacked versions of Cocoon.

 - By setting properties in forrest.properties, the user can specify
   where their project's doc files (sitemap, xdocs, images, skins,
   skinconf, lib) are located.

 - Modifies the forrest-site skin to be configurable for non-Apache projects.
   Previously there were some xml.apache.org hardcodings. Also enhances
   configurability by:
	- providing a flag to disable the search box
    - providing a 'host' section in the bottom-left, for things like
      sourceforge logos
    - by providing a 'credits' section where multiple small images can
      link to 'credited' projects.

 - Previously, each Forrest-generated page had page-relative links to
   'skins/images/*', and then a sitemap rule eliminated any directory prefix.
   This leads to multiple copies of images on the filesystem:

   http://www.outerthought.net/forrest/images/group-logo.gif
   http://www.outerthought.net/forrest/community/howto/images/group-logo.gif
   http://www.outerthought.net/forrest/xml-site/images/group-logo.gif

   The patch fixes this by generating a '../' path to the site root, and
   then using the {context-root}/skins/images rule.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7429 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -250,10 +250,11 @@
       </fileset>
     </copy>
 
-    <!-- Copy Cocoon configuration and sitemap -->
+    <!-- Copy Cocoon configuration, sitemap and skin conf -->
     <copy todir="${build.context}" filtering="on">
       <fileset dir="${documentation.context.dir}/conf">
         <include name="sitemap.xmap"/>
+        <include name="skinconf.xml"/>
         <include name="cocoon.xconf"/>
         <include name="logkit.xconf"/>
       </fileset>
