- Fix bug where logfiles weren't being created because Cocoon wasn't being told   where logkit.xconf lives. - Let users override cocoon.xconf and logkit.xconf - Don't 'seed' a project that already has content, to prevent accidents - Update changelog
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7459 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -11,6 +11,7 @@
 # Properties that must be set to override the default locations
 #project.status=${project.home}/status.xml
 #project.content-dir=${project.home}/src/documentation
+#project.conf-dir=${project.content-dir}/conf
 #project.sitemap=${project.content-dir}/sitemap.xmap
 #project.xdocs-dir=${project.content-dir}/content/xdocs
 #project.stylesheets-dir=${project.content-dir}/resources/stylesheets
