Fix script refs from 'forrest.sh' to 'forrest'
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7462 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
      forrest-typical targets:
 
      dist ------------- build all incarnation distributions:
-     dist-shbat ------- build the forrest.sh/bat incarnation (requires ant to *run*)
+     dist-shbat ------- build the forrest shell/bat incarnation (requires ant to *run*)
 
      future targets:
 
@@ -323,7 +323,7 @@
   *-----------------------------------------------------------------
   | installation notice 
   *-----------------------------------------------------------------
-  | You have succesfully build the shell-bat version of forrest.
+  | You have succesfully built the shell-bat distribution of forrest.
   | Please find it at: ${dist-shbat.dir}
   | Please copy the contents to the install directory of your choice
   | Please have the environment variable FORREST_HOME point to it.
@@ -331,9 +331,9 @@
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
   | Calling
-  |    unix: $FORREST_HOME/bin/forrest.sh usage 
-  |    win: %FORREST_HOME%\bin\forrest.bat usage
-  | will explain how to use this distribution.
+  |    unix: $FORREST_HOME/bin/forrest -projecthelp
+  |    win: %FORREST_HOME%\bin\forrest -projecthelp
+  | Will list options for the forrest command
   | More help at http://xml.apache.org/forrest and forrest-dev@xml.apache.org
   *-----------------------------------------------------------------
     </echo>
